--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,17 @@
 development:
   adapter: postgresql
-  database: posts_and_projects
+  database: db/dwyn_development
   pool: 5
   timeout: 5000
 test:
   adapter: postgresql
-  database: posts_and_projects
+  database: db/dwyn_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: posts_and_projects
+  database: db/dwyn_production
   pool: 5
   timeout: 5000
 
