--- a/config/database.yml
+++ b/config/database.yml
@@ -3,17 +3,26 @@ development:
   database: db/dwyn_development
   pool: 5
   timeout: 5000
+  username: user
+  password: 1618
+
+host: localhost
+
 test:
   adapter: postgresql
   database: db/dwyn_test
   pool: 5
   timeout: 5000
+  username: user
+  password: 1618
 
 production:
   adapter: postgresql
   database: db/dwyn_production
   pool: 5
   timeout: 5000
+  username: user
+  password: 1618
 
 # SQLite version 3.x
 #   gem install sqlite3
